fixed context menu alignment in complex objects on small screens (req by unibe)
svn path=/ZMS/trunk/; revision=3116

--- a/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -1269,6 +1269,10 @@ div.right .btn .caret {
 	}
 	.zmi-children ul.zmi-container > li.zmi-item > div.right {
 		width: 93% !important;
+		/* obsolete? */
+	}
+	.accordion-group.zmi-container .zmi-children ul.zmi-container > li.zmi-item > div.right {
+		width: 100% !important;
 	}
 	ul.zmi-container .zmi-item .zmi-action {
 		margin-left:0px;
